# obp-kd-enose

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment-hpc.yml  environment-local.yml  environment.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_user.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: data.yaml  data_registry.yaml  docking.yaml  eval.yaml  project.yaml  train_student.yaml  train_teacher.yaml  user_infer.yaml
configs/experiment/: uci_forward.yaml
configs/preprocess/: common.yaml  tempmod.yaml  twin.yaml  uci_drift.yaml
configs/prior/: obp_list.yaml  prior_config.yaml  voc_map.yaml
docking/: README.md
docking/scripts/: gnina_smoke.sbatch  make_prior_table.py  run_gnina_array.sbatch
docs/: ARCHITECTURE.md  LEAKAGE_RULES.md  PRIOR_SCHEMA.md  USAGE_HPC_vs_USER.md
gnina_build/: build_gnina_torch.sbatch  check_gnina_deps.sh  gnina_build_torch.494311.err  gnina_build_torch.494311.out
hpc/: env_activate.sh  train_student.sbatch  train_teacher.sbatch
results/: README.md
results/uci_forward_mvp/: metrics.csv  report.md
scripts/: bootstrap_end2end.sh  bootstrap_registry.sh  dev_setup.sh  make_data.sh  release_pack.sh  run_docking_prior.sh  train_kd_gsa.py  user_run_local.sh
tests/: conftest.py  test_dataset_shapes.py  test_models_shapes.py  test_no_leakage.py  test_preprocess_shapes.py  test_preprocessing.py  test_prior_loader.py  test_prior_pipeline.py  test_registry_parsing.py
tools/: make_report.py  preview_preprocess.py
(+48 files in other folders)
